@@ -69,6 +69,11 @@ class ReadOnly(Argument):
     arguments, but might be generated by a callback or a serializer.
     '''
 
+    def present(self, instance):
+        # Serializers contribute to Update or Create actions *always*
+        # So mark them as present, either though they aren't 'set'
+        return True
+
     def clean(self, instance, value):
         raise errors.InvalidParameter('This argument is read-only')
 
@@ -89,7 +94,7 @@ class Callable(ReadOnly):
     def __init__(self, func):
         self.func = func
 
-    def get_default(self, instance):
+    def default(self, instance):
         return self.func(instance)
 
 
@@ -111,7 +116,7 @@ class Output(ReadOnly):
     def __init__(self, propname):
         self.propname = propname
 
-    def get_default(self, instance):
+    def default(self, instance):
         return instance.get_property(self.propname)
 
 
@@ -128,12 +133,7 @@ class Serializer(ReadOnly):
             )
     '''
 
-    def present(self, instance):
-        # Serializers contribute to Update or Create actions *always*
-        # So mark them as present, either though they aren't 'set'
-        return True
-
-    def get_default(self, instance):
+    def default(self, instance):
         return instance
 
 
