@@ -4,7 +4,8 @@ Changelog for Touchdown
 0.15.8 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Core: Ensure that an argument.Serializer or similar contributing to a
+  serialization is always considered present.
 
 
 0.15.7 (2016-09-13)
